--- a/package.json
+++ b/package.json
@@ -2,20 +2,31 @@
   "name": "punchoutservice",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.ts",
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js"
+    "build": "babel src --out-dir dist --extensions \".ts,.js\"",
+    "serve": "node dist/index.js",
+    "start": "nodemon --watch src --ext ts,js,json --exec \"npm run build && npm run serve\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.4",
+    "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "qiniu": "^7.12.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.4"
+    "@babel/cli": "^7.24.8",
+    "@babel/core": "^7.25.2",
+    "@babel/node": "^7.25.0",
+    "@babel/preset-env": "^7.25.3",
+    "@babel/preset-typescript": "^7.24.7",
+    "@types/body-parser": "^1.19.5",
+    "@types/express": "^4.17.21",
+    "nodemon": "^3.1.4",
+    "typescript": "^5.5.4"
   }
 }
